--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,33 +1,71 @@
 {% block content %}
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'login.css' %}">
-<body class="body">
-<h2 class="header">Login</h2>
-<form method="post" class="form">{% csrf_token %}
-    {% for field in login_form %}
+<head>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<style type="text/css">
+    .form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+.form-signin .checkbox {
+  font-weight: 400;
+}
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.h3 {
+    text-align: center;
+}
+</style>
+
+<body>
+<form class="form-signin" method="post">{% csrf_token %}
+    <h1 class="h3 mb-3 font-weight-normal">Login</h1>
+    <label for="inputEmail" class="sr-only">Email address</label>
+    <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+    <label for="inputPassword" class="sr-only">Password</label>
+    <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
+    <div class="checkbox mb-3">
+    </div>
+        {% for field in login_form %}
         <p>
-            {{field.label_tag}}
-            {{field}}
-
-            {% if field.help_text %}
-                <small style="color: grey;">{{field.help_text}}</small>
-            {% endif %}
-        </p>
     {% endfor %}
-    {% for field in login_form.errors %}
         {% for error in field.errors %}
-        <p style="color: red;">{{error}}</p>
+        <p style="color: cadetblue;">{{error}}</p>
         {% endfor %}
-    {% endfor %}
-
+        </p>
     {% if login_form.non_field_errors %}
-        <div style="color:red;">
+        <div style="color:cadetblue;">
             <p>{{login_form.non_field_errors}}</p>
         </div>
     {% endif %}
-    <button type="submit" class="button">Login</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     <p class="href"><a href="{% url 'register' %}">Not Signed Up? Register Here</a></p>
-</form>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
+</head>
+  </form>
 
 {% endblock content %}
