--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,24 +1,76 @@
 {% block content %}
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'register.css' %}">
-<body class="body">
-<h2 class="header">Register</h2>
-<form method="post" enctype="multipart/form-data" class="form">{% csrf_token %}
-    {% for field in registration_form %}
-        <p>
-            {{field.label_tag}}
-            {{field}}
-            {% if field.help_text %}
-                <small style="color: grey;">{{field.help_text}}</small>
-            {% endif %}
+<head>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<style type="text/css">
+    .form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+.form-signin .checkbox {
+  font-weight: 400;
+}
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="text"] {
+  margin-bottom: 10px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: -1px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
 
-            {% for error in field.errors %}
-                <p style="color: red;">{{error}}</p>
-            {% endfor %}
-        </p>
+.h3{
+    text-align: center;
+}
+</style>
+
+<body>
+<form class="form-signin" method="post">{% csrf_token %}
+    <h1 class="h3 mb-3 font-weight-normal">Register an Account</h1>
+    <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+    <input type="text" name="username" id="inputUsername" class="form-control" placeholder="Username" required>
+    <input type="password" name="password1" id="inputPassword1" class="form-control" placeholder="Password" required>
+    <input type="password" name="password2" id="inputPassword2" class="form-control" placeholder="Repeat Password" required>
+    <div class="checkbox mb-3">
+    </div>
+        {% for field in registration_form %}
+        <p>
     {% endfor %}
-    <button type="submit" class="button">Register</button>
+        {% for error in field.errors %}
+        <p style="color: cadetblue;">{{error}}</p>
+        {% endfor %}
+        </p>
+    {% if registration_form.non_field_errors %}
+        <div style="color:cadetblue;">
+            <p>{{registration_form.non_field_errors}}</p>
+        </div>
+    {% endif %}
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
     <p class="href"><a href="{% url 'login' %}">Already got an Account? Login here!</a></p>
-</form>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
+</head>
+  </form>
+
 {% endblock content %}
