--- a/studyspaceapp/frontend/src/components/reviewHeader/ReviewHeader.css
+++ b/studyspaceapp/frontend/src/components/reviewHeader/ReviewHeader.css
@@ -30,7 +30,7 @@
   
   .review {
     padding: 20px;
-    margin: 10px;
-    background-color: lightgray;
+    margin: 20px;
+    color: black;
     border-radius: 10px;
   }
